Save markdown images
Created markdown images for homepage and website list (main screen)
using draw.io.  Saved both the image and the draw io file used to make
the images.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+config/credentials.yml.enc
 
 ### Linux ###
 *~
@@ -203,3 +204,6 @@ bower.json # same
 
 # End of https://www.gitignore.io/api/rails
 
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
